# TorrentPlayer

./: CMakeLists.txt  conanfile.txt
.github/workflows/: ci.yml  cmake-multi-platform.yml
cmake/: Helpers.cmake
deployScripts/mac/: restyleDmg.sh
resources/: qml.qrc
resources/mac/: Info.plist.in
resources/win/: appicon.rc
scripts/: run-clang-tidy.py
src/: main.cpp
src/App/: App.cmake  main.cpp
src/App/Controllers/GuiController/: GuiController.cpp  GuiController.h
src/App/Utils/: Utils.h
src/App/qml/: Main.qml
src/App/resources/: qml.qrc
src/GuiController/: GuiController.cpp  GuiController.h
src/TorrentDownloader/: Notifier.cpp  Notifier.h  Observer.cpp  Observer.h  TorrentDownloader.cmake  TorrentDownloader.cpp  TorrentDownloader.h
src/qml/: main.qml
src/qml/Player/: Player.qml
